...
    return _CanalUdp._(socket, enderecos.first, s.porta, await _ipLocal());
  }

  @override
  final String ipLocal;
  @override
  String get via => 'UDP';
  @override
  int get portaLocal => _socket.port;
  @override
  bool get fiavel => false;
  @override
  Stream<String> get mensagens => _entrada.stream;
...
      if (igual) return i;
    }
    return -1;
  }

  @override
  String get via => 'TLS';
  @override
  String get ipLocal => _socket.address.address;
  @override
  int get portaLocal => _socket.port;
  @override
  bool get fiavel => true;
...
